fix the z-index issue

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -298,6 +298,7 @@ pre[ref="SCSS"] {
     -ms-transition: margin-right 0.5s cubic-bezier(0.77, 0, 0.175, 1);
     -o-transition: margin-right 0.5s cubic-bezier(0.77, 0, 0.175, 1);
     transition: margin-right 0.5s cubic-bezier(0.77, 0, 0.175, 1);
+    z-index: 10;
     
     >.fa-times {
         position: absolute;
